--- a/swarm/compose.yml
+++ b/swarm/compose.yml
@@ -8,7 +8,7 @@ volumes:
   
 services:
   web-fe:
-    image: nigelpoulton/gsd:swarm2023
+    image: jburson2574/gsd:swarm2023
     command: python app.py
     deploy:
       replicas: 10
